[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipromptbucket"
version = "0.1.0"
description = "Python SDK for AI Prompt Bucket — managed prompt registry for teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bright Wing Solutions LLC", email = "support@brightwingsolutions.com" },
]
keywords = ["ai", "prompts", "llm", "prompt-management", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.24",
]

[project.scripts]
apb = "aipromptbucket.cli:main"

[project.urls]
Homepage = "https://aipromptbucket.com"
Repository = "https://github.com/Brightwing-Systems-LLC/aipromptbucket-python"
Documentation = "https://aipromptbucket.com/docs/sdks/python"
"Bug Tracker" = "https://github.com/Brightwing-Systems-LLC/aipromptbucket-python/issues"
Changelog = "https://github.com/Brightwing-Systems-LLC/aipromptbucket-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/aipromptbucket"]

[tool.bumpversion]
current_version = "0.1.0"
commit = true
tag = true
allow_dirty = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "src/aipromptbucket/__init__.py"

[dependency-groups]
dev = [
    "bump-my-version>=1.2.7",
]
